--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ConferenceAppDatabase": "Data Source=99B1-C16BE22961,1433;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
