--- a/ConferenceApp.csproj
+++ b/ConferenceApp.csproj
@@ -5,6 +5,8 @@
     <UserSecretsId>778841d4-4f19-4e29-be41-af740862f8aa</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="29.0.2" />
+    <PackageReference Include="CountryData.Bogus" Version="3.29.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
