--- a/.gitignore
+++ b/.gitignore
@@ -234,3 +234,9 @@ _Pvt_Extensions
 .fake/
 
 .vscode/
+
+# published web applicaition directory
+web/
+
+# production config
+appsettings.Production.json
