Add roles and superadmin seeder

--- a/ConferenceApp.csproj
+++ b/ConferenceApp.csproj
@@ -42,5 +42,8 @@
       <LastGenOutput>ConferenceAppDataSet1.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Areas\Identity\NewFolder\" />
+  </ItemGroup>
 
 </Project>
